# HuffmanCoding

./: HuffmanCoding.cabal  stack.yaml
app/: Main.hs
src/: HuffmanCode.hs  Lib.hs
test/: Spec.hs
