name:                HuffmanCoding
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wmarvel/HuffmanCoding#readme
license:             BSD3
license-file:        LICENSE
author:              Wendall A. Marvel
maintainer:          wmarvel@yahoo.com
copyright:           Copyright (C) 2017 Wendall A. Marvel
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable HuffmanCoding-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , HuffmanCoding
  default-language:    Haskell2010

test-suite HuffmanCoding-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HuffmanCoding
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wmarvel/HuffmanCoding
